...
                            VehicleRowView(vehicle: vehicle)
                        }.modifier(AddLines())
                    }
                }
                Section {
                    NavigationLink(destination: SettingsView()) {
                        Text("Settings").frame(maxWidth: .infinity, alignment: .center)
                    }.modifier(AddLines())
                }
            }.listStyle(GroupedListStyle())
            .navigationBarTitle("Controls for Tesla", displayMode: .inline)
            .navigationBarItems(trailing:
                Button(action: {
                    self.viewModel.getList()
                }, label: {
                    Image(systemName: "arrow.clockwise").font(Font.body.weight(.bold))
                }).disabled(viewModel.isWaitingForResponse)
...
