...
        let modelIndex = vin.index(vin.startIndex, offsetBy: 3)
        let model = vin[modelIndex]
        switch model {
        case "S":
            return "Model S"
        case "3":
            return "Model 3"
        case "X":
            return "Model X"
        case "Y":
            return "Model Y"
        case "R":
            return "Roadster"
...
            return "2015"
        case "G":
            return "2016"
        case "H":
            return "2017"
        case "J":
            return "2018"
        case "K":
            return "2019"
        case "L":
            return "2020"
        case "M":
            return "2021"
...
